[toby spring 6] refactor: WebApiExRateProvider