@@ -1,5 +1,6 @@
 package tobyspring.hellospring6.exrate;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import tobyspring.hellospring6.payment.ExRateProvider;
 
@@ -8,23 +9,37 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.math.BigDecimal;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.stream.Collectors;
 
 public class WebApiExRateProvider implements ExRateProvider {
     @Override
-    public BigDecimal getExRate(final String currency) throws IOException {
-        final URL url = new URL("https://open.er-api.com/v6/latest/" + currency);
-        final HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-        final BufferedReader br = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-        final String response = br.lines().collect(Collectors.joining());
-        br.close();
+    public BigDecimal getExRate(final String currency) {
+        final String url = "https://open.er-api.com/v6/latest/" + currency;
+        URI uri;
+        try {
+            uri = new URI(url);
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
+        }
 
-        final ObjectMapper mapper = new ObjectMapper();
-        final ExRateData data = mapper.readValue(response, ExRateData.class);
+        String response;
+        try {
+            final HttpURLConnection connection = (HttpURLConnection) uri.toURL().openConnection();
+            try (BufferedReader br = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
+                response = br.lines().collect(Collectors.joining());
+            }
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
 
-        System.out.println("API ExRate: " + data.rates().get("KRW"));
-
-        return data.rates().get("KRW");
+        try {
+            final ObjectMapper mapper = new ObjectMapper();
+            final ExRateData data = mapper.readValue(response, ExRateData.class);
+            return data.rates().get("KRW");
+        } catch (JsonProcessingException e) {
+            throw new RuntimeException(e);
+        }
     }
 }
